[metadata]
name = python-visa-server
version = 0.0.1
author = Chen Ze
author_email = chenze_ustc@mail.ustc.edu.cn
description = An HTTP server for communication with instruments.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Chen-Ze/python-visa-server
project_urls =
    Bug Tracker = https://github.com/Chen-Ze/python-visa-server/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    Flask >= 1.1.2
    PyVISA >= 1.11.3
    PyVISA-py >= 0.5.2
    waitress >= 2.0.0
    coloredlogs >= 15.0.1
    keithley2600 >= 2.0.1
    PyMeasure >= 0.9.0
    pythonnet >= 2.3.0

[options.packages.find]
where = src